choco-parser/src/main/java/parser/flatzinc/FlatzincFullExtParser.java
// $ANTLR 3.4 parser/flatzinc/FlatzincFullExtParser.g 2013-05-15 14:03:48

/*
 * Copyright (c) 1999-2012, Ecole des Mines de Nantes
 * All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 *     * Neither the name of the Ecole des Mines de Nantes nor the
 *       names of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND ANY
 * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE REGENTS AND CONTRIBUTORS BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

package parser.flatzinc;



import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class FlatzincFullExtParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ANNOTATIONS", "ANY", "APAR", "ARRAY", "ARRPAR", "ARRVAR", "AS", "AVAR", "BOOL", "CA1", "CA2", "CARITY", "CHAR", "CL", "CM", "CNAME", "COMMENT", "CONSTRAINT", "CSTR", "DC", "DD", "DO", "EACH", "ENGINE", "EQ", "ESC_SEQ", "EXPONENT", "EXPR", "FALSE", "FLOAT", "FOR", "HEAP", "HEX_DIGIT", "IDENTIFIER", "IN", "INDEX", "INT", "INT_CONST", "KEY", "LB", "LIST", "LP", "LS", "MANY1", "MANY2", "MANY3", "MANY4", "MAX", "MAXIMIZE", "MIN", "MINIMIZE", "MN", "NOT", "OCTAL_ESC", "OEQ", "OF", "OGQ", "OGT", "OLQ", "OLT", "ONE", "ONQ", "OR", "ORDERBY", "PAR", "PARITY", "PL", "PPRIO", "PPRIOD", "PREDICATE", "PROP", "QUEUE", "RB", "REV", "RP", "RS", "SATISFY", "SC", "SET", "SIZE", "SOLVE", "STREG", "STRING", "STRUC1", "STRUC2", "SUM", "TRUE", "UNICODE_ESC", "VAR", "VCARD", "VNAME", "WFOR", "WONE", "WS"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int ANNOTATIONS=5;
    public static final int ANY=6;
    public static final int APAR=7;
    public static final int ARRAY=8;
    public static final int ARRPAR=9;
    public static final int ARRVAR=10;
    public static final int AS=11;
    public static final int AVAR=12;
    public static final int BOOL=13;
    public static final int CA1=14;
    public static final int CA2=15;
    public static final int CARITY=16;
    public static final int CHAR=17;
    public static final int CL=18;
    public static final int CM=19;
    public static final int CNAME=20;
    public static final int COMMENT=21;
    public static final int CONSTRAINT=22;
    public static final int CSTR=23;
    public static final int DC=24;
    public static final int DD=25;
    public static final int DO=26;
    public static final int EACH=27;
    public static final int ENGINE=28;
    public static final int EQ=29;
    public static final int ESC_SEQ=30;
    public static final int EXPONENT=31;
    public static final int EXPR=32;
    public static final int FALSE=33;
    public static final int FLOAT=34;
    public static final int FOR=35;
    public static final int HEAP=36;
    public static final int HEX_DIGIT=37;
    public static final int IDENTIFIER=38;
    public static final int IN=39;
    public static final int INDEX=40;
    public static final int INT=41;
    public static final int INT_CONST=42;
    public static final int KEY=43;
    public static final int LB=44;
    public static final int LIST=45;
    public static final int LP=46;
    public static final int LS=47;
    public static final int MANY1=48;
    public static final int MANY2=49;
    public static final int MANY3=50;
    public static final int MANY4=51;
    public static final int MAX=52;
    public static final int MAXIMIZE=53;
    public static final int MIN=54;
    public static final int MINIMIZE=55;
    public static final int MN=56;
    public static final int NOT=57;
    public static final int OCTAL_ESC=58;
    public static final int OEQ=59;
    public static final int OF=60;
    public static final int OGQ=61;
    public static final int OGT=62;
    public static final int OLQ=63;
    public static final int OLT=64;
    public static final int ONE=65;
    public static final int ONQ=66;
    public static final int OR=67;
    public static final int ORDERBY=68;
    public static final int PAR=69;
    public static final int PARITY=70;
    public static final int PL=71;
    public static final int PPRIO=72;
    public static final int PPRIOD=73;
    public static final int PREDICATE=74;
    public static final int PROP=75;
    public static final int QUEUE=76;
    public static final int RB=77;
    public static final int REV=78;
    public static final int RP=79;
    public static final int RS=80;
    public static final int SATISFY=81;
    public static final int SC=82;
    public static final int SET=83;
    public static final int SIZE=84;
    public static final int SOLVE=85;
    public static final int STREG=86;
    public static final int STRING=87;
    public static final int STRUC1=88;
    public static final int STRUC2=89;
    public static final int SUM=90;
    public static final int TRUE=91;
    public static final int UNICODE_ESC=92;
    public static final int VAR=93;
    public static final int VCARD=94;
    public static final int VNAME=95;
    public static final int WFOR=96;
    public static final int WONE=97;
    public static final int WS=98;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public FlatzincFullExtParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public FlatzincFullExtParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return FlatzincFullExtParser.tokenNames; }
    public String getGrammarFileName() { return "parser/flatzinc/FlatzincFullExtParser.g"; }


    public static class flatzinc_ext_model_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "flatzinc_ext_model"
    // parser/flatzinc/FlatzincFullExtParser.g:42:1: flatzinc_ext_model : ( pred_decl )* ( param_decl )* ( var_decl )* ( constraint )* ( engine )? solve_goal ;
    public final FlatzincFullExtParser.flatzinc_ext_model_return flatzinc_ext_model() throws RecognitionException {
        FlatzincFullExtParser.flatzinc_ext_model_return retval = new FlatzincFullExtParser.flatzinc_ext_model_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        FlatzincFullExtParser.pred_decl_return pred_decl1 =null;

        FlatzincFullExtParser.param_decl_return param_decl2 =null;

        FlatzincFullExtParser.var_decl_return var_decl3 =null;

        FlatzincFullExtParser.constraint_return constraint4 =null;

        FlatzincFullExtParser.engine_return engine5 =null;

        FlatzincFullExtParser.solve_goal_return solve_goal6 =null;



        try {
            // parser/flatzinc/FlatzincFullExtParser.g:43:2: ( ( pred_decl )* ( param_decl )* ( var_decl )* ( constraint )* ( engine )? solve_goal )
            // parser/flatzinc/FlatzincFullExtParser.g:43:6: ( pred_decl )* ( param_decl )* ( var_decl )* ( constraint )* ( engine )? solve_goal
            {
            root_0 = (Object)adaptor.nil();


            // parser/flatzinc/FlatzincFullExtParser.g:43:6: ( pred_decl )*
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case PREDICATE:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // parser/flatzinc/FlatzincFullExtParser.g:43:7: pred_decl
            	    {
            	    pushFollow(FOLLOW_pred_decl_in_flatzinc_ext_model67);
            	    pred_decl1=pred_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, pred_decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // parser/flatzinc/FlatzincFullExtParser.g:43:19: ( param_decl )*
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // parser/flatzinc/FlatzincFullExtParser.g:43:20: param_decl
            	    {
            	    pushFollow(FOLLOW_param_decl_in_flatzinc_ext_model72);
            	    param_decl2=param_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, param_decl2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // parser/flatzinc/FlatzincFullExtParser.g:43:33: ( var_decl )*
            loop3:
            do {
                int alt3=2;
                switch ( input.LA(1) ) {
                case ARRAY:
                case VAR:
                    {
                    alt3=1;
                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // parser/flatzinc/FlatzincFullExtParser.g:43:34: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_flatzinc_ext_model77);
            	    var_decl3=var_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, var_decl3.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // parser/flatzinc/FlatzincFullExtParser.g:43:45: ( constraint )*
            loop4:
            do {
                int alt4=2;
                switch ( input.LA(1) ) {
                case CONSTRAINT:
                    {
                    alt4=1;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // parser/flatzinc/FlatzincFullExtParser.g:43:46: constraint
            	    {
            	    pushFollow(FOLLOW_constraint_in_flatzinc_ext_model82);
            	    constraint4=constraint();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, constraint4.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // parser/flatzinc/FlatzincFullExtParser.g:43:59: ( engine )?
            int alt5=2;
            switch ( input.LA(1) ) {
                case IDENTIFIER:
                    {
                    alt5=1;
                    }
                    break;
            }

            switch (alt5) {
                case 1 :
                    // parser/flatzinc/FlatzincFullExtParser.g:43:60: engine
                    {
                    pushFollow(FOLLOW_engine_in_flatzinc_ext_model87);
                    engine5=engine();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, engine5.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_solve_goal_in_flatzinc_ext_model91);
            solve_goal6=solve_goal();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, solve_goal6.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "flatzinc_ext_model"


    public static class engine_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "engine"
    // parser/flatzinc/FlatzincFullExtParser.g:53:1: engine : ( group_decl )+ structure ;
    public final FlatzincFullExtParser.engine_return engine() throws RecognitionException {
        FlatzincFullExtParser.engine_return retval = new FlatzincFullExtParser.engine_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        FlatzincFullExtParser.group_decl_return group_decl7 =null;

        FlatzincFullExtParser.structure_return structure8 =null;



        try {
            // parser/flatzinc/FlatzincFullExtParser.g:54:5: ( ( group_decl )+ structure )
            // parser/flatzinc/FlatzincFullExtParser.g:54:9: ( group_decl )+ structure
            {
            root_0 = (Object)adaptor.nil();


            // parser/flatzinc/FlatzincFullExtParser.g:54:9: ( group_decl )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                switch ( input.LA(1) ) {
                case IDENTIFIER:
                    {
                    switch ( input.LA(2) ) {
                    case CL:
                        {
                        alt6=1;
                        }
                        break;

                    }

                    }
                    break;

                }

                switch (alt6) {
            	case 1 :
            	    // parser/flatzinc/FlatzincFullExtParser.g:54:9: group_decl
            	    {
            	    pushFollow(FOLLOW_group_decl_in_engine114);
            	    group_decl7=group_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, group_decl7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            pushFollow(FOLLOW_structure_in_engine117);
            structure8=structure();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, structure8.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "engine"


    public static class group_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "group_decl"
    // parser/flatzinc/FlatzincFullExtParser.g:58:1: group_decl : IDENTIFIER CL predicates SC -> ^( IDENTIFIER predicates ) ;
    public final FlatzincFullExtParser.group_decl_return group_decl() throws RecognitionException {
        FlatzincFullExtParser.group_decl_return retval = new FlatzincFullExtParser.group_decl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IDENTIFIER9=null;
        Token CL10=null;
        Token SC12=null;
        FlatzincFullExtParser.predicates_return predicates11 =null;


        Object IDENTIFIER9_tree=null;
        Object CL10_tree=null;
        Object SC12_tree=null;
        RewriteRuleTokenStream stream_SC=new RewriteRuleTokenStream(adaptor,"token SC");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_CL=new RewriteRuleTokenStream(adaptor,"token CL");
        RewriteRuleSubtreeStream stream_predicates=new RewriteRuleSubtreeStream(adaptor,"rule predicates");
        try {
            // parser/flatzinc/FlatzincFullExtParser.g:59:5: ( IDENTIFIER CL predicates SC -> ^( IDENTIFIER predicates ) )
            // parser/flatzinc/FlatzincFullExtParser.g:59:9: IDENTIFIER CL predicates SC
            {
            IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_group_decl137); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENTIFIER.add(IDENTIFIER9);


            CL10=(Token)match(input,CL,FOLLOW_CL_in_group_decl139); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CL.add(CL10);


            pushFollow(FOLLOW_predicates_in_group_decl141);
            predicates11=predicates();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_predicates.add(predicates11.getTree());

            SC12=(Token)match(input,SC,FOLLOW_SC_in_group_decl143); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SC.add(SC12);


            // AST REWRITE
            // elements: predicates, IDENTIFIER
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 60:5: -> ^( IDENTIFIER predicates )
            {
                // parser/flatzinc/FlatzincFullExtParser.g:60:9: ^( IDENTIFIER predicates )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_IDENTIFIER.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_predicates.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "group_decl"


    public static class predicates_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "predicates"
    // parser/flatzinc/FlatzincFullExtParser.g:65:1: predicates : ( predicate | LP predicates ( AND predicates )+ RP -> ^( AND ( predicates )+ ) | LP predicates ( OR predicates )+ RP -> ^( OR ( predicates )+ ) );
    public final FlatzincFullExtParser.predicates_return predicates() throws RecognitionException {
        FlatzincFullExtParser.predicates_return retval = new FlatzincFullExtParser.predicates_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token LP14=null;
        Token AND16=null;
        Token RP18=null;
        Token LP19=null;
        Token OR21=null;
        Token RP23=null;
        FlatzincFullExtParser.predicate_return predicate13 =null;

        FlatzincFullExtParser.predicates_return predicates15 =null;

        FlatzincFullExtParser.predicates_return predicates17 =null;

        FlatzincFullExtParser.predicates_return predicates20 =null;

        FlatzincFullExtParser.predicates_return predicates22 =null;


        Object LP14_tree=null;
        Object AND16_tree=null;
        Object RP18_tree=null;
        Object LP19_tree=null;
        Object OR21_tree=null;
        Object RP23_tree=null;
        RewriteRuleTokenStream stream_AND=new RewriteRuleTokenStream(adaptor,"token AND");
        RewriteRuleTokenStream stream_RP=new RewriteRuleTokenStream(adaptor,"token RP");
        RewriteRuleTokenStream stream_OR=new RewriteRuleTokenStream(adaptor,"token OR");
        RewriteRuleTokenStream stream_LP=new RewriteRuleTokenStream(adaptor,"token LP");
        RewriteRuleSubtreeStream stream_predicates=new RewriteRuleSubtreeStream(adaptor,"rule predicates");
        try {
            // parser/flatzinc/FlatzincFullExtParser.g:66:2: ( predicate | LP predicates ( AND predicates )+ RP -> ^( AND ( predicates )+ ) | LP predicates ( OR predicates )+ RP -> ^( OR ( predicates )+ ) )
            int alt9=3;
            switch ( input.LA(1) ) {
            case CARITY:
            case CNAME:
            case CSTR:
            case IN:
            case NOT:
            case PARITY:
            case PPRIO:
            case PPRIOD:
            case PROP:
            case TRUE:
            case VAR:
            case VCARD:
            case VNAME:
                {
                alt9=1;
                }
                break;
            case LP:
                {
                int LA9_5 = input.LA(2);

                if ( (synpred9_FlatzincFullExtParser()) ) {
                    alt9=2;
                }
                else if ( (true) ) {
                    alt9=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 5, input);

                    throw nvae;

                }
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }

            switch (alt9) {
                case 1 :
                    // parser/flatzinc/FlatzincFullExtParser.g:66:4: predicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_predicate_in_predicates172);
                    predicate13=predicate();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, predicate13.getTree());

                    }
                    break;
                case 2 :
                    // parser/flatzinc/FlatzincFullExtParser.g:67:4: LP predicates ( AND predicates )+ RP
                    {
                    LP14=(Token)match(input,LP,FOLLOW_LP_in_predicates177); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LP.add(LP14);

